# cold_emailer

./: README.md  package-lock.json
cold-reach/: .gitignore  Dockerfile  README.md  SCALING_STRATEGY.md  SETUP_GMAIL.md  package-lock.json  package.json
cold-reach/api-core/: openapi.yaml  requirements.txt  setup.cfg
cold-reach/api-core/.openapi-generator/: FILES
cold-reach/api-core/src/: database.py
cold-reach/api-core/src/openapi_server/: main.py  security_api.py
cold-reach/api-core/src/openapi_server/apis/: default_api.py  default_api_base.py
cold-reach/api-core/src/openapi_server/impl/: default_api_impl.py
cold-reach/api-core/src/openapi_server/models/: client.py  client_create.py  client_status.py  email_attachment.py  email_log.py  email_request.py  email_template.py  import_clients_excel200_response.py  import_clients_google_sheet_request.py  send_email200_response.py  task.py  template.py
cold-reach/api-core/tests/: test_default_api.py
cold-reach/backend/: __init__.py  coldreach.db  config.py  database.py  main.py  models.py  openapi.yaml  requirements.txt  schemas.py
cold-reach/backend/auth/: __init__.py  jwt.py  oauth.py  utils.py
cold-reach/backend/routes/: __init__.py  auth.py  sheets.py
cold-reach/cold_email_venv/: pyvenv.cfg
cold-reach/docs/: AUTH_SETUP.md
cold-reach/frontend/: package.json
cold-reach/openapi-gen-template/: README.md  api-core.yaml  generate_risk_app_openapi_spec.py
cold-reach/scripts/: generate_fastapi_from_template.sh  run-post-process-pyfile-wrapper.sh  run-post-process-pyfile.sh
cold-reach/src/app/: page.js  (+2 more)
(+33 files in other folders)
